Blockchain network exercise

--- a/Exercises/Exercise_2/Blockchain_Exercise_Student.ipynb
+++ b/Exercises/Exercise_2/Blockchain_Exercise_Student.ipynb
@@ -48,28 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "582eb3b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Block:\n",
-    "#     def __init__(self, # TODO - Add specified parameters):\n",
-    "        # TODO - Initialize specified parameters\n",
-    "    \n",
-    "    def __init__(self, index, timestamp, previous_hash, transactions, nonce):\n",
-    "        self.index = index\n",
-    "        self.timestamp = timestamp\n",
-    "        self.previous_hash = previous_hash\n",
-    "        self.transactions = transactions\n",
-    "        self.nonce = nonce\n",
-    "\n",
-    "    def compute_hash(self):\n",
-    "        attributes = copy.copy(self.__dict__)\n",
-    "        if 'hash' in attributes: # Ensuring that the block's hash isn't used when it's re-hashed\n",
-    "            attributes.pop('hash')\n",
-    "        block_string = json.dumps(attributes, sort_keys=True)\n",
-    "        return hashlib.sha256(block_string.encode()).hexdigest()"
+    "    def __init__(self, # TODO - Add specified parameters):\n",
+    "        # TODO - Initialize specified parameters"
    ]
   },
   {
@@ -91,17 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b8a0ed4f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "unconfirmed_transactions = []\n",
-    "chain = []\n",
-    "genesis_block = Block(0, time.time(), \"0\", [], 0)\n",
-    "genesis_block.hash = genesis_block.compute_hash()\n",
-    "chain.append(genesis_block)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -119,20 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "757d9f11",
    "metadata": {},
    "outputs": [],
    "source": [
     "difficulty = 4\n",
     "def consensus(block):\n",
-    "    # TODO - Implement proof-of-work function\n",
-    "    \n",
-    "    computed_hash = block.compute_hash()\n",
-    "    while not computed_hash.startswith('0' * difficulty):\n",
-    "        block.nonce += 1\n",
-    "        computed_hash = block.compute_hash()\n",
-    "    return computed_hash"
+    "    # TODO - Implement proof-of-work function"
    ]
   },
   {
@@ -145,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "33dacde5",
    "metadata": {},
    "outputs": [],
@@ -193,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bc8d66c0",
    "metadata": {},
    "outputs": [],
@@ -201,17 +175,7 @@
     "def mine():\n",
     "    global unconfirmed_transactions # Necessary to avoid scope issue \n",
     "    \n",
-    "    # TODO - Implement Mining Function\n",
-    "    \n",
-    "    last_block = chain[-1]\n",
-    "    new_block = Block(index = last_block.index + 1,\n",
-    "                      timestamp = time.time(),\n",
-    "                      previous_hash = last_block.hash,\n",
-    "                      transactions = unconfirmed_transactions,\n",
-    "                      nonce = 0)\n",
-    "    block_hash = consensus(new_block)\n",
-    "    print(add_block(new_block, block_hash))\n",
-    "    unconfirmed_transactions = []"
+    "    # TODO - Implement Mining Function"
    ]
   },
   {
@@ -230,26 +194,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d80afc7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def validate_chain():\n",
-    "    # TODO - Implement chain validator\n",
-    "    \n",
-    "    previous_block = chain[0]\n",
-    "    block_index = 1\n",
-    "    while block_index < len(chain):\n",
-    "        block = chain[block_index]\n",
-    "        if block.previous_hash != previous_block.compute_hash():\n",
-    "            return \"Warning: Mismatching block hashes are detected.\"\n",
-    "        block_hash = block.compute_hash()\n",
-    "        if not is_valid_hash(block, block_hash):\n",
-    "            return \"Warning: Current block hash is invalid.\"\n",
-    "        previous_block = block\n",
-    "        block_index += 1\n",
-    "    return \"Blockchain is valid.\""
+    "    # TODO - Implement chain validator"
    ]
   },
   {
@@ -271,14 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e7b596cb",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# add_new_transaction({\"Sender\" : \"Alice\", \"Reciever\" : \"Bob\", \"Amount\" : 20.22})\n",
-    "# add_new_transaction({\"Sender\" : \"George\", \"Reciever\" : \"Paul\", \"Amount\" : 16.67})"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -290,26 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c4c0a1d2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A block with the following transactions has been succesfully added to the blockchain:\n",
-      "{\"Sender\": \"Alice\", \"Reciever\": \"Bob\", \"Amount\": 20.22}\n",
-      "{\"Sender\": \"George\", \"Reciever\": \"Paul\", \"Amount\": 16.67}\n",
-      "\n",
-      "A block has been succesfully added to the blockchain.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# mine() # With transactions\n",
-    "# mine() # Without transactions"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -325,24 +258,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1e38484f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blockchain is valid.\n",
-      "Warning: Current block hash is invalid.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print(validate_chain())\n",
-    "# chain[1].transactions[0][\"Reciever\"] = \"Dr. Doofenshmirtz\"\n",
-    "# print(validate_chain())"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
